// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1 List item with all the props 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Notification
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <a
            class="action isActive hoverable"
            href="#"
            id="1"
          >
            <div
              class="icon"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="checkmark"
                viewBox="0 0 720 720"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="kBAjqBTXEsI- S4fBuUx-A70-"
                  d="M141.223 359.106c-2.77-2.868-6.083-5.156-9.747-6.73s-7.604-2.402-11.592-2.438c-3.987-0.033-7.941 0.727-11.632 2.237-3.691 1.507-7.043 3.739-9.863 6.558s-5.049 6.171-6.559 9.862c-1.51 3.691-2.27 7.646-2.235 11.633s0.863 7.928 2.436 11.591c1.574 3.663 3.862 6.976 6.73 9.748l141.108 158.942c5.631 5.628 13.267 8.79 21.23 8.79s15.6-3.162 21.23-8.79l339.116-339.119c2.871-2.77 5.156-6.083 6.732-9.747 1.574-3.664 2.399-7.604 2.435-11.592s-0.724-7.941-2.234-11.632c-1.51-3.691-3.741-7.043-6.562-9.863-2.817-2.82-6.171-5.049-9.862-6.559s-7.646-2.27-11.63-2.235c-3.988 0.034-7.928 0.863-11.591 2.436-3.667 1.574-6.979 3.862-9.748 6.73l-317.889 317.888-119.876-137.711z"
                />
              </svg>
            </div>
            <div
              class="info"
            >
              <h5
                class="base bold base heading"
              >
                Jordan Yeo completed a visit
              </h5>
              <p
                class="base regular base text"
              >
                <span
                  class="truncate"
                >
                  Build a deck
                </span>
              </p>
              <p
                class="base regular base text"
              >
                <span
                  class="truncate"
                >
                  Fa la la la la
                </span>
              </p>
              <p
                class="base regular base textSecondary"
              >
                <span
                  class="base regular small italic"
                >
                  Sep 24, 2019
                </span>
              </p>
            </div>
            <div
              class="amount"
            >
              <p
                class="base regular base text"
              >
                <b
                  class="base bold"
                >
                  $30.00
                </b>
              </p>
            </div>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`should render a button list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <button
        class="action hoverable"
        id="1"
        role="button"
        type="button"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Click me
            </span>
          </p>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`should render a link with url list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Learn more
            </span>
          </p>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render an a tag with url and on click list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Learn more
            </span>
          </p>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`shouldn't render a list item if it's given an empty array 1`] = `
<div>
  <ul
    class="list"
  />
</div>
`;
